# auv

./: .gitignore  CMakeLists.txt  Pipfile  README.md  camera_nodes.launch  enbarr.launch  enbarr_1t.launch  package.xml  requirements.txt
autostart/: README.md  surface_enbarr.service  surface_launch.sh
config/: README.md  __init__.py  config.yaml  simulate_peripherals.py  test_setup.json
control/: control_aggregator.py  joystick_executor.py  trajectory_executor.py  trajectory_planner.py
core/: enbarr.py
docs/: adjusting_control_loop_parameters.md  api.md  auv.md  planning_and_executing_trajectories.md  setup.md
install/: local_setup.sh  setup.sh  setup.zsh
launch/: README.md  config.launch  core.launch  ieee2020.launch  simulate.launch
msg/: JoystickChaos.msg  Ninedof.msg  README.md  SurfaceCommand.msg  Trajectory.msg  Translation.msg  arbitrary_pca_commands.msg  bar30.msg  buttons.msg  gyroscope.msg  io_request.msg  joystick_chaos.msg  magnetometer.msg  mode.msg  multistep_trajectory.msg  ninedof.msg  orientation.msg  pid_params.msg  position.msg  scanarea.msg  surface_command.msg  thruster_sensor.msg  thrustermove.msg  trajectory.msg  translation.msg
networking/: BroadcastServerFactory.py  BroadcastServerProtocol.py
node_templates/: websocket_client.py  websocket_producer.py
opencv/: Coral_Detection.py
pca/: pca_listener.py
samples/: pca_sender_test.py  trajectory_sender_test.py
scripts/: README.md  chaos_sender.py  cli_controller.py  echo_msg.py  pca_kill_thruster.py  pca_pwm.py  pca_set_thruster.py  pca_stepper.py  pca_unkill_thruster.py  (+3 more)
(+199 files in other folders)
