<?xml version="1.0"?>
<package format="2">
  <name>auv</name>
  <version>0.0.0</version>
  <description>Code to run an ROV/AUV (thrusters, trajectories, and more!)</description>

  <maintainer email="chris@cthierauf.com">Chris Thierauf</maintainer>

  <license>GPLv3</license>

  <author email="chris@thierauf.com">Chris Thierauf</author>
  <author email="dosterv@wit.edu">Vlad Doster</author>
  <author email="wallr1@wit.edu">Ryley Wall</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
